--- a/src/main/resources/com/example/myspeechtotext/mainScene.fxml
+++ b/src/main/resources/com/example/myspeechtotext/mainScene.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Button?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="432.0" prefWidth="768.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.myspeechtotext.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="432.0" prefWidth="768.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.myspeechtotext.Controller">
    <children>
       <TextArea fx:id="textArea" layoutX="34.0" layoutY="28.0" prefHeight="300.0" prefWidth="700.0">
          <font>
